--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 08</title>
-    <script src="js/arrays-practice.js"></script>
+    <script src="js/01-arrays-practice.js" defer></script>
 </head>
 <body>
-    
 </body>
 </html>
